Fixed bug where horizontal navigation arrows were still visible when switching tabs.

--- a/src/ui-style/ui.css
+++ b/src/ui-style/ui.css
@@ -449,6 +449,9 @@ modebar {
   line-height: 21px;
   background: #d9d9d9;
 }
+modebar.hidden {
+  display: none;
+}
 
 window-select {
   position: relative;
